Added a unique view template for the group public gallery list

--- a/views/gallery/gallery_group_list.html
+++ b/views/gallery/gallery_group_list.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 {% if galleries|length_is:0 %}
-None
+  <i>This group doesn't have any galleries yet!</i>
 {% endif %}
 
 {% for gal in galleries %}
