--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -1,4 +1,18 @@
 {% extends "base.html" %}
+{% block custom_header %}{% if can.adduser %}
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+  
+  <script>
+  $(document).ready(function() {
+    $("input#autocomplete").autocomplete({
+    source: ["c++", "java", "php", "coldfusion", "javascript", "asp", "ruby"]
+});
+  });
+  </script>
+  {%endif%}
+{% endblock %}
 {% block sidebar_top %}
 <ul>
     {% if can.adduser %}
