--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -43,7 +43,7 @@
 <form method="post" >
 <fieldset><legend>Add User to Group</legend>
 {{ formAddUser.as_p }}
-<input id="autoselect" style="display:none">
+<input id="autocomplete" style="">
 {% csrf_token %}
 <input type="submit" value="Add New Member" >
 <a href="#" onClick="toggle(1)">Cancel</a>
