too tired ... again

--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -56,7 +56,7 @@ if (!Array.prototype.filter)
 	opts=opts.map(function(i){return opts[i].substr(6,opts[i].length);})
 	c=[]
 	for (i=0;i<opts.length;i++){
-		c.push(opts[i]
+		c.push(opts[i])
 	}
 	//$('#autoselect').autocomplete({ source:opts })
     $("input#autocomplete").autocomplete({
