--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -54,13 +54,10 @@ if (!Array.prototype.filter)
 	opts=opts.map(function (i){return opts[i].innerHTML})
 	opts=opts.filter(function(i){return opts[i].match('User:');})
 	opts=opts.map(function(i){return opts[i].substr(6,opts[i].length);})
-	c=[]
-	for (i=0;i<opts.length;i++){
-		c.push(opts[i])
-	}
+	
 	//$('#autoselect').autocomplete({ source:opts })
     $("input#autocomplete").autocomplete({
-    source: Array(c)
+    source: [{{addUserString}}]
 });
   });
   </script>
