--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -2,7 +2,11 @@
 {% block pagetitle %}
 Profile
 {% endblock pagetitle %}
-
+{% block sidebar_top%}
+<ul>
+ <li><a href="/groups/Add/">Request a New Group</a></li>               
+</ul>
+{% endblock %}
 {% block content %}
 
 <h2>Welcome, {{usr.get_full_name}} ({{usr.username}})<hr/>
@@ -10,7 +14,10 @@ Profile
 <p>Email: {{usr.email}}
 	<br>
 <a href="/email/check">{{unread_emails}} unread messsages</a></p>
-
+{% if not roles %}
+<i>You Dont Have Any Groups Yet</i><br/>You May Request A new group with the link to the right
+<br>To Join an existing group you must contact the admin of that group directly and ask them to add you
+{% endif %}
 {% for role in roles %}
 	{% comment %}
   {%if role.isSiteAdminRole %}
