--- a/views/users/profile.html
+++ b/views/users/profile.html
@@ -15,7 +15,7 @@ Profile
 	<br>
 <a href="/email/check">{{unread_emails}} unread messsages</a></p>
 {% if not roles %}
-<i>You Dont Have Any Groups Yet</i><br/>You May Request A new group with the link to the right
+<i>You Dont Have Any Groups Yet</i><br/>You May Request A new group with the link to the left
 <br>To Join an existing group you must contact the admin of that group directly and ask them to add you
 {% endif %}
 {% for role in roles %}
