trying to add enough bytes that chrome will render 404

--- a/views/404.html
+++ b/views/404.html
@@ -1,7 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Oops!</h1>
-<p>It looks like you wanted to go somewhere, but this isnt how you get there.</p>
-<p><a href="/">Go Back To The Homepage</a></p>
+<div>
+		<div id="main_col" class="copy">
+			<h2 class="divider first">Uh-oh! That page can't be found.</h2>
+			<p><img src="/images/bg_404_nerds.jpg" alt="angry and sad man"></p> 
+		
+		</div><!--END MAIL COL-->
+		<div id="sub_col" class="copy">
+			<h3 class="divider first">Don't get angry, and don't cry.</h3>
+			<p><strong>Let us take that burden.</strong> It's not your fault. No, really, listen to me. It's not your fault. We have a 24 hour hotline to deal with things just like this. Okay, its not really a hotline, its really just some encouraging words to keep trying, but hotline sounds so much .</p>
+			
+			<h3 class="divider">The very nerdy error</h3>
+			
+			<p><strong>404 Page Not Found</strong> - </p><p>The page you requested was not found.</p><p></p>
+			
+			
+		</div>
+ </div>
 {% endblock %}
