--- a/views/404.html
+++ b/views/404.html
@@ -1,10 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style type="text/css">
+#sub_col {
+float: right;
+width: 318px;
+}
+#main_col {
+float: left;
+width: 473px;
+}
+</style>
 <div>
 		<div id="main_col" class="copy">
 			<h2 class="divider first">Uh-oh! That page can't be found.</h2>
-			<p><img src="/images/bg_404_nerds.jpg" alt="angry and sad man"></p> 
+			<p><img src="/include/images/bg_404_nerds.jpg" alt="angry and sad man"></p> 
 		
 		</div><!--END MAIL COL-->
 		<div id="sub_col" class="copy">
