added a link to the root from 404 page(that now renders in chrome)

--- a/views/404.html
+++ b/views/404.html
@@ -23,7 +23,7 @@ width: 473px;
 			
 			<h3 class="divider">The very nerdy error</h3>
 			
-			<p><strong>404 Page Not Found</strong> - </p><p>The page you requested was not found.</p><p></p>
+			<p><strong>404 Page Not Found</strong> - </p><p>The page you requested was not found.</p><p><a href="/">Go Back To The Begining</a></p>
 			
 			
 		</div>
