added a credit link to where i stole the 404 from

--- a/views/404.html
+++ b/views/404.html
@@ -19,7 +19,7 @@ width: 473px;
 		</div><!--END MAIL COL-->
 		<div id="sub_col" class="copy">
 			<h3 class="divider first">Don't get angry, and don't cry.</h3>
-			<p><strong>Let us take that burden.</strong> It's not your fault. No, really, listen to me. It's not your fault. We have a 24 hour hotline to deal with things just like this. Okay, its not really a hotline, its really just some encouraging words to keep trying, but hotline sounds so much .</p>
+			<p><strong>Let us take that burden.</strong> It's not your fault. No, really, listen to me. It's not your fault. We have a 24 hour hotline to deal with things just like this. Okay, its not really a hotline, its really just some encouraging words to keep trying, but hotline sounds so much better.</p>
 			
 			<h3 class="divider">The very nerdy error</h3>
 			
@@ -27,5 +27,6 @@ width: 473px;
 			
 			
 		</div>
+		this 404 page is <del>courtesy of</del> hijacked from <a href="http://patterntap.com/404">http://patterntap.com/404</a>
  </div>
 {% endblock %}
