oops pushed credit to bottom

--- a/views/404.html
+++ b/views/404.html
@@ -27,6 +27,8 @@ width: 473px;
 			
 			
 		</div>
+		<div style="clear:both">
 		this 404 page is <del>courtesy of</del> hijacked from <a href="http://patterntap.com/404">http://patterntap.com/404</a>
+		</div>
  </div>
 {% endblock %}
