--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -102,7 +102,7 @@ if (!Array.prototype.filter)
 Your Request To Join This Group is pending approval
 </div>
 {% endif %}
-<h2>{{ group }}</h2>
+<h2>{{ group.group_name }}</h2>
 {%if can.editgroup %}
 <a href="/groups/{{ group.id }}/Edit">Edit Group Description</a>
 {% endif  %}
@@ -175,8 +175,7 @@ function toggle(flag){
 		<a href="/roles/EditPerms/{{r.id}}/">{{r.name}}</a>
 	{% else %}
 		{{r.name}}
-
-	{% endif %} 
+	{% endif %} )
 
 	<br/>
 <div style="margin-left:40px">
