--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -170,7 +170,7 @@ function toggle(flag){
 	<div style="margin-left:15px">
 	{% for r in subgrp.roles %}
 	{% for usr in r.users.all %}
-	{{ usr.username }} (
+	{{ usr.get_full_name }} '{{ usr.username }}' (
 	{% if r.name != "Owner" and can.editrole %}
 		<a href="/roles/EditPerms/{{r.id}}/">{{r.name}}</a>
 	{% else %}
