--- a/views/groups/viewGroup.html
+++ b/views/groups/viewGroup.html
@@ -132,7 +132,7 @@ You Can Add A Role By Clicking the <a href="/groups/{{group.id}}/CreateRole/">Cr
 {% endif %}
 {% for r in roles %}
 {% for usr in r.users.all %}
-{{ usr.get_full_name }} '{{ usr.username }}' (
+<strong>{{ usr.get_full_name }}</strong> - {{ usr.username }} (
 {% if r.name != "Owner" and can.editrole %}
 <a href="/groups/EditPerms/{{r.id}}/">{{r.name}}</a>
 {% else %}
@@ -170,7 +170,7 @@ function toggle(flag){
 	<div style="margin-left:15px">
 	{% for r in subgrp.roles %}
 	{% for usr in r.users.all %}
-	{{ usr.get_full_name }} '{{ usr.username }}' (
+	<strong>{{ usr.get_full_name }}</strong> - {{ usr.username }} (
 	{% if r.name != "Owner" and can.editrole %}
 		<a href="/roles/EditPerms/{{r.id}}/">{{r.name}}</a>
 	{% else %}
