--- a/views/users/reset.html
+++ b/views/users/reset.html
@@ -3,7 +3,8 @@
 {% block pagetitle %}
 Password Reset
 {% endblock pagetitle %}
-
+<h2>Forgot your Password?</h2>
+<h3>Enter your email address and we'll get you a temporary password.</h3>
 {% block content %}
 <form method="post">
 {{ form.as_p }}
