--- a/views/calendar/day_view.html
+++ b/views/calendar/day_view.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 <h3>{{name}}</h3>
-<b>Creator:</b> {{creator.username}}
-<br> 
 {{start_date}}
 <br>
-{{start_time}} to endtime
+{{start_time}} to {{end_time}}
 <br>
+<b>Creator:</b> {{creator.username}}
+<br> 
 <b>Group:</b> {{event_group.group_name}} 
 <br>
 <b>Description:</b> {{description}}
