--- a/views/gallery/gallery_edit.html
+++ b/views/gallery/gallery_edit.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 <form action="" method="post">
-  {{gallery_form.as_p}}
+  {{gallery_form.as_table}}
   {% csrf_token %}
   <input type="submit" value="Save Changes"/>
 </form>
