--- a/views/gallery/image_add.html
+++ b/views/gallery/image_add.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 <form action="" method="post" enctype="multipart/form-data">
-  {{image_form.as_p}}
+  {{image_form.as_table}}
   {% csrf_token %}
   <input type="submit" value="Add"/>
 </form>
