--- a/views/gallery/image_edit.html
+++ b/views/gallery/image_edit.html
@@ -10,11 +10,14 @@
   <br/><br/>
 {% endif %}
 
-<form action="" method="post" enctype="multipart/form-data">
-  {{image_form.as_table}}
-  {% csrf_token %}
-  <input type="submit" value="Save Changes"/>
-</form>
+<table>
+  <form action="" method="post" enctype="multipart/form-data">
+    {{image_form.as_table}}
+    {% csrf_token %}
+    <input type="submit" value="Save Changes"/>
+  </form>
+</table>
+
 <br/>
 <a href="/gallery/{{gallery.id}}">Cancel</a>
 {% endblock %}
