--- a/views/gallery/image_add.html
+++ b/views/gallery/image_add.html
@@ -10,13 +10,16 @@
   <br/><br/>
 {% endif %}
 
-<table>
-  <form action="" method="post" enctype="multipart/form-data">
+<form action="" method="post" enctype="multipart/form-data">
+  <table class="login_register">
     {{image_form.as_table}}
     {% csrf_token %}
-    <input type="submit" value="Add"/>
-  </form>
-</table>
+    <tr>
+      <td></td>
+      <td><input type="submit" value="Add"/></td>
+    </tr>
+  </table>
+</form>
 
 <br/>
 <a href="/gallery/{{gallery.id}}">Cancel</a>
