--- a/views/gallery/gallery_add.html
+++ b/views/gallery/gallery_add.html
@@ -11,16 +11,17 @@
 {% endif %}
 
 <form action="" method="post">
-  <table class="login_register">
+  <table class="niceform">
     {{gallery_form.as_table}}
     {% csrf_token %}
     <tr>
       <td></td>
-      <td><input type="submit" value="Create Gallery"/></td>
+      <td>
+	<input type="submit" value="Create Gallery"/><br/>
+	<a href="/gallery">Cancel</a>
+      </td>
     </tr>
   </table>
 </form>
 
-<br/>
-<a href="/gallery">Cancel</a>
 {% endblock %}
