--- a/media/css/default.css
+++ b/media/css/default.css
@@ -314,10 +314,12 @@ table td.odd:hover td
 
 /* Nicer form tables */
 table.niceform {
+        background: none;
         border: none;
 	border-collapse: collapse;
+	color: #000;
 }
-table.niceform tr td label{
+table.niceform tr th{
         text-align: right;
 }
 
