Maybe the rest of the CSS is fine, but the default table ones are... tough to work with.

--- a/media/css/default.css
+++ b/media/css/default.css
@@ -266,15 +266,17 @@ a .header_image{
 
 
 /* Nicer form tables */
-table.niceform {
-        background: none;
+.niceform {
+        background: #fff;
         border: none;
 	border-collapse: collapse;
 	color: #000;
+	margin: 0px;
 }
-table.niceform tr th{
+.niceform th{
         text-align: right;
 }
+
 
 /* Table Defaults */
 table
