events are now sorted by time

--- a/views/calendar/view_events.html
+++ b/views/calendar/view_events.html
@@ -6,7 +6,7 @@
 
 <br>
 <h3>{{event.event_name}}</h3>
-{{event.start_time}} to {{end_time}}
+{{event.start_time}} to {{event.end_time}}
 <br>
 <b>Creator:</b> {{event.creator.username}}
 <br> 
