Fixed 'Add Item' link to only be visible to admins.

--- a/views/news/show.html
+++ b/views/news/show.html
@@ -128,7 +128,7 @@
 <br /><br /><br />
 <br /><br /><br />
 {% endfor %}
-<a href="/news/_add">Add News Item</a>
+{{ addlink|safe }}
 
 {% endblock content %}
 
